<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sonicbrains.amazzenger.MainActivity">

    <Button
        android:id="@+id/pick_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="pickContact"
        android:text="@string/pick_contact" />

    <LinearLayout
        android:id="@+id/linear_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pick_contact"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/name_contact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text=""
            android:textAppearance="?android:textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout1"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/phone_number"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/contact_phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text=""
            android:textAppearance="?android:textAppearanceMedium" />

    </LinearLayout>

    <EditText
        android:id="@+id/message_area"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/linear_layout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="top"
        android:hint="@string/enter_the_message_here">

        <requestFocus />
    </EditText>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/message_area"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/progress_bar"
        android:layout_centerHorizontal="true"
        android:text="@string/send" />

</RelativeLayout>
